# netcorehost

./: .gitattributes  Cargo.toml  README.md  build.rs  update-nethost.bat  update-nethost.ps1
.github/scripts/: install-dotnet-linux  install-dotnet-macos  install-dotnet-ubuntu  install-dotnet-windows.ps1  uninstall-dotnet-macos  uninstall-dotnet-ubuntu  uninstall-dotnet-windows.ps1
.github/workflows/: build.yml  ci.yml  rerun.yml  rust.yml
NethostDownloader/: NethostDownloader.csproj  NethostDownloader.sln  Program.cs
examples/call-managed-function/: main.rs
examples/call-managed-function/ExampleProject/: ExampleProject.csproj  Program.cs
examples/call-native-function/: main.rs
examples/call-native-function/ExampleProject/: ExampleProject.csproj  ExampleProject.sln  Program.cs
examples/helpers/: dotnet-build.rs
examples/passing-parameters/: main.rs
examples/passing-parameters/ExampleProject/: ExampleProject.csproj  ExampleProject.sln  Program.cs
examples/return-string-from-managed/: main.rs
examples/return-string-from-managed/ExampleProject/: ExampleProject.csproj  Program.cs
examples/run-app/: main.rs
examples/run-app-with-args/: main.rs
examples/run-app-with-args/ExampleProject/: Program.cs
examples/run-app/ExampleProject/: ExampleProject.sln  Program.cs
netcorehost/: .gitignore  Cargo.toml  build.rs
netcorehost/runtimes/linux-arm/: apphost
netcorehost/runtimes/linux-arm64/: apphost
netcorehost/runtimes/linux-musl-arm/: apphost
netcorehost/runtimes/linux-musl-arm64/: apphost
netcorehost/runtimes/linux-musl-x64/: apphost
netcorehost/runtimes/linux-x64/: apphost
netcorehost/runtimes/osx-x64/: apphost  libnethost.dylib  singlefilehost
netcorehost/runtimes/rhel/: apphost
netcorehost/runtimes/win-arm/: ijwhost.lib  nethost.lib
netcorehost/runtimes/win-arm64/: ijwhost.lib  nethost.lib
netcorehost/runtimes/win-x64/: ijwhost.lib  nethost.lib
netcorehost/runtimes/win-x86/: ijwhost.lib  nethost.lib
netcorehost/src/: error.rs  host_exit_code.rs  hostfxr.rs  lib.rs  nethost.rs
netcorehost/src/bindings/: hostfxr.rs  mod.rs  nethost.rs  type_aliases.rs
netcorehost/src/hostfxr/: context.rs  mod.rs
netcorehost/src/pdcstring/: error.rs  mod.rs  other.rs  shared.rs  windows.rs
netcorehost/tests/: common.rs  hello_world.rs  run_app.rs  runtime_properties.rs  unmanaged_callers_only.rs
netcorehost/tests/Test/: .gitignore
runtimes/linux-musl-x64/: apphost
runtimes/win-x64/: ijwhost.lib
src/: error.rs  hostfxr.rs  lib.rs  nethost.rs  utils.rs
src/bindings/: consts.rs  hostfxr.rs  mod.rs  nethost.rs  status_code.rs  type_aliases.rs
src/error/: hosting_result.rs  load_hostfxr_error.rs  mod.rs  univ.rs
src/hostfxr/: context.rs  delegate_loader.rs  dotnet_paths.rs  helper.rs  host_exit_code.rs  hosting_exit_code.rs  hosting_result.rs  library.rs  library1_0.rs  library2_1.rs  library3_0.rs  library6_0.rs  managed_function.rs  mod.rs  runtime_property.rs
src/pdcstring/: error.rs  mod.rs  other.rs  shared.rs  windows.rs
src/pdcstring/impl/: mod.rs  traits.rs
src/pdcstring/impl/other/: error.rs  ext.rs  mod.rs  pdcstr.rs  pdcstring.rs
src/pdcstring/impl/windows/: error.rs  ext.rs  mod.rs  pdcstr.rs  pdcstring.rs
src/runtimes/linux-arm/: apphost
src/runtimes/linux-arm64/: apphost
src/runtimes/linux-musl-arm/: apphost
src/runtimes/linux-musl-arm64/: apphost
src/runtimes/linux-x64/: apphost
src/runtimes/osx-x64/: apphost  libnethost.dylib
src/runtimes/rhel/: apphost
src/runtimes/win-arm/: ijwhost.lib  nethost.lib
src/runtimes/win-arm64/: ijwhost.lib
src/runtimes/win-x86/native/: ijwhost.lib  nethost.lib
tests/: add-dotnet-to-path.ps1  common.rs  custom_delegate_type.rs  environment_info.rs  error_writer.rs  errors.rs  hello_world.rs  hello_world_nethost_bin.rs  load_assembly_manually.rs  manual_close_frees_lib.rs  pdcstr.rs  primary_and_secondary.rs  run_app.rs  runtime_properties.rs  sdk_resolve.rs  unhandled_managed_exeptions.rs  unmanaged_callers_only.rs
tests/ClassLibrary/: .gitignore  ClassLibrary-net10.0.csproj  ClassLibrary-net8.0.csproj  ClassLibrary-net9.0.csproj  ClassLibrary.csproj  ClassLibrary.sln  Library.cs
tests/Test/: Program.cs  Test-net10.0.csproj  Test-net8.0.csproj  Test-net9.0.csproj  Test.csproj  Test.sln
tests/common/: mod.rs
tests/macro-build-tests/: .gitignore  cast-managed-fn-compile-fail.rs  cast-managed-fn-pass.rs  pdcstr-compile-fail.other.stderr  pdcstr-compile-fail.rs  pdcstr-compile-fail.windows.stderr  pdcstr-pass.rs
tests/macro-test-crate/: Cargo.toml
tests/macro-test-crate/src/: main.rs
