[package]
name = "netcorehost"
version = "0.11.2"
description = "A Rust library for hosting the .NET Core runtime."
readme = "README.md"
repository = "https://github.com/OpenByteDev/netcorehost"
documentation = "https://docs.rs/netcorehost"
license = "MIT"
authors = ["OpenByte <development.openbyte@gmail.com>"]
edition = "2021"
categories = ["api-bindings", "external-ffi-bindings"]
keywords = ["nethost", "hostfxr", "dotnet", "bindings", "coreclr"]

[dependencies]
num_enum = { version = "0.5", default-features = false }
thiserror = { version = "1.0", default-features = false }
derive_more = { version = "0.99", features = ["deref", "from", "display"], default-features = false }
nethost-sys = { version = "0.5", optional = true, default-features = false }
hostfxr-sys = { version = "0.5", default-features = false }
coreclr-hosting-shared = { version = "0.1", default-features = false }
destruct-drop = { version = "0.1", default-features = false }
ffi-opaque = { version = "2.0", default-features = false }

[target.'cfg(windows)'.dependencies]
widestring = { version = "1.0", features = ["std"], default-features = false }
u16cstr = { version = "0.4", default-features = false }

[target.'cfg(not(windows))'.dependencies]
cstr = { version = "0.2", default-features = false }

[dev-dependencies]
trybuild = "1.0"
current_platform = "0.2"
glob = "0.3"
widestring = "1.0"
rusty-fork = "0.3"

[features]
default = ["nethost", "nethost-download", "netcore3_0"]
nethost-download = ["nethost", "nethost-sys/download-nuget"]
nethost = ["nethost-sys"]
nightly = []
doc-cfg = []
netcore1_0 = ["hostfxr-sys/netcore1_0"]
netcore2_0 = ["hostfxr-sys/netcore2_0", "netcore1_0"]
netcore2_1 = ["hostfxr-sys/netcore2_1", "netcore2_0"]
netcore3_0 = ["hostfxr-sys/netcore3_0", "netcore2_1"]

# Prevent downloading nethost library when building on docs.rs.
[package.metadata.docs.rs]
features = ["nethost", "netcore3_0", "doc-cfg", "nightly"]
no-default-features = true
