[package]
name = "netcorehost"
version = "0.15.1"
description = "A Rust library for hosting the .NET Core runtime."
readme = "README.md"
repository = "https://github.com/OpenByteDev/netcorehost"
documentation = "https://docs.rs/netcorehost"
license = "MIT"
authors = ["OpenByte <development.openbyte@gmail.com>"]
edition = "2021"
categories = ["api-bindings", "external-ffi-bindings"]
keywords = ["nethost", "hostfxr", "dotnet", "bindings", "coreclr"]

[dependencies]
num_enum = { version = "0.6", default-features = false }
thiserror = { version = "1.0", default-features = false }
derive_more = { version = "0.99", features = ["deref", "from", "display"], default-features = false }
hostfxr-sys = { version = "0.9", features = ["enum-map", "undocumented"], default-features = false }
coreclr-hosting-shared = { version = "0.1", default-features = false }
destruct-drop = { version = "0.2", default-features = false }
ffi-opaque = { version = "2.0", default-features = false }
enum-map = { version = "2.6", default-features = false }
once_cell = { version = "1.18", default-features = false }
nethost-sys = { version = ">=0.6.2", optional = true, default-features = false }

[target.'cfg(windows)'.dependencies]
widestring = { version = "1.0", features = ["std"], default-features = false }

[target.'cfg(not(windows))'.dependencies]
cstr = { version = "0.2", default-features = false }

[dev-dependencies]
trybuild = "1.0"
current_platform = "0.2"
glob = "0.3"
widestring = "1.0"
rusty-fork = "0.3"
path-absolutize = "3.1"

[features]
default = ["nethost-download", "net7_0"]
nethost-download = ["nethost", "nethost-sys/download-nuget"]
nethost = ["nethost-sys"]
nightly = []
doc-cfg = []
netcore1_0 = ["hostfxr-sys/netcore1_0"]
netcore2_0 = ["hostfxr-sys/netcore2_0", "netcore1_0"]
netcore2_1 = ["hostfxr-sys/netcore2_1", "netcore2_0"]
netcore3_0 = ["hostfxr-sys/netcore3_0", "netcore2_1"]
net5_0 = ["hostfxr-sys/net5_0", "netcore3_0"]
net6_0 = ["hostfxr-sys/net6_0", "net5_0"]
net7_0 = ["hostfxr-sys/net7_0", "net6_0"]
net8_0 = ["hostfxr-sys/net8_0", "net7_0"]
latest = ["hostfxr-sys/latest", "net8_0"]

# Prevent downloading nethost library when building on docs.rs.
[package.metadata.docs.rs]
features = ["nethost", "latest", "doc-cfg", "nightly"]
no-default-features = true
