[package]
name = "netcorehost"
version = "0.19.0"
description = "A Rust library for hosting the .NET Core runtime."
readme = "README.md"
repository = "https://github.com/OpenByteDev/netcorehost"
documentation = "https://docs.rs/netcorehost"
license = "MIT"
authors = ["OpenByte <development.openbyte@gmail.com>"]
edition = "2021"
categories = ["api-bindings", "external-ffi-bindings"]
keywords = ["nethost", "hostfxr", "dotnet", "bindings", "coreclr"]

[dependencies]
num_enum = { version = "0.7", default-features = false }
thiserror = { version = "2.0", default-features = false }
derive_more = { version = "2.0", features = ["deref", "from", "display"], default-features = false }
hostfxr-sys = { version = "0.13", features = ["enum-map", "undocumented", "wrapper", "optional-apis"], default-features = false }
coreclr-hosting-shared = { version = "0.1", default-features = false }
destruct-drop = { version = "0.2", default-features = false }
enum-map = { version = "2.7", default-features = false }
once_cell = { version = "1.21", default-features = false }
fn-ptr = { version = "0.4", default-features = false }
nethost-sys = { version = "0.7", optional = true, default-features = false }

[target.'cfg(windows)'.dependencies]
widestring = { version = "1.2", features = ["std"], default-features = false }

[target.'cfg(not(windows))'.dependencies]
cstr = { version = "0.2", default-features = false }
libc = { version = "0.2", default-features = false, optional = true }

[dev-dependencies]
trybuild = "1.0"
current_platform = "0.2"
glob = "0.3"
widestring = "1.2"
rusty-fork = "0.3"
path-absolutize = "3.1"

[target.'cfg(not(windows))'.dev-dependencies]
libc = { version = "0.2", default-features = false }

[features]
default = ["nethost-download", "net10_0", "utils"]
nethost-download = ["nethost", "nethost-sys/download-nuget"]
nethost = ["nethost-sys"]
nightly = []
utils = ["libc"]
doc-cfg = []
netcore1_0 = ["hostfxr-sys/netcore1_0"]
netcore2_0 = ["hostfxr-sys/netcore2_0", "netcore1_0"]
netcore2_1 = ["hostfxr-sys/netcore2_1", "netcore2_0"]
netcore3_0 = ["hostfxr-sys/netcore3_0", "netcore2_1"]
net5_0 = ["hostfxr-sys/net5_0", "netcore3_0"]
net6_0 = ["hostfxr-sys/net6_0", "net5_0"]
net7_0 = ["hostfxr-sys/net7_0", "net6_0"]
net8_0 = ["hostfxr-sys/net8_0", "net7_0"]
net9_0 = ["hostfxr-sys/net9_0", "net8_0"]
net10_0 = ["hostfxr-sys/net10_0", "net9_0"]
latest = ["hostfxr-sys/latest", "net10_0"]

# Prevent downloading nethost library when building on docs.rs.
[package.metadata.docs.rs]
features = ["nethost", "latest", "doc-cfg", "nightly", "utils"]
no-default-features = true
